# 2026Autumn-recruitment

./: .gitignore  Daily-Schedule.md  README.md
Algorithm/: head.h
Algorithm/backtracking/: combinationSum.cpp  combinationSum2.cpp  combine.cpp  conbinationSum3.cpp  findSubsequences.cpp  letterCombinations.cpp  partition.cpp  permute.cpp  permuteUnique.cpp  restoreIpAddresses.cpp  solveQueens.cpp  subsetsWithDup.cpp
Algorithm/dynamicprogramming/: 01bag.cpp  canPartition.cpp  climbStairs.cpp  coinChange.cpp  fib.cpp  findTargetSumWays.cpp  integerBreak.cpp  lastStoneWeightII.cpp  minCostClimbingStairs.cpp  numSquares.cpp  numTrees.cpp  uniquePaths.cpp  uniquePathsWithObstacles.cpp  wordBreak.cpp
Algorithm/graph/: allPathsSourceTarget.cpp  dfs.cpp  isFullyReachable.cpp  ladderLength.cpp  largestIsland.cpp  numIslands_BFS.cpp  numIslands_DFS.cpp  pacificAtlantic.cpp  shortestMazePath.cpp
Algorithm/greedy/: canCompleteCircuit.cpp  canJump.cpp  candy.cpp  eraseOverlapIntervals.cpp  findContentChildren.cpp  findMinArrowShots.cpp  jump.cpp  largestSumAfterKNegations.cpp  lemonadeChange.cpp  maxProfit.cpp  maxSubArray.cpp  merge.cpp  monotoneIncreasingDigits.cpp  partitionLabels.cpp  reconstructQueue.cpp  wiggleMaxLength.cpp
Algorithm/listnode/: MyLinkedList.cpp  detectCycle.cpp  getIntersectionNode.cpp  removeElements.cpp  removeNthFromEnd.cpp  swapPairs.cpp
Algorithm/mathematics/: primeNumbers.cpp
Algorithm/monotonicstack/: dailyTemperatures.cpp  (+2 more)
C++/: C++关键字.md
HPC/: cuda.md  readme.md
HPC/cpu/gemm/: CMakeLists.txt  readme.md
HPC/cpu/gemm/demo/: main.cpp
HPC/cpu/gemm/include/: gemm.h
HPC/cpu/gemm/source/: OpenBLAS.cpp  version1.cpp  version2.cpp  version3.cpp  version4.cpp  version5.cpp  version6.cpp  version7.cpp
HPC/cuda/gemv/: CMakeLists.txt  readme.md
HPC/cuda/gemv/demo/: main.cpp
HPC/cuda/gemv/include/: gemv.cuh
HPC/cuda/gemv/source/: cublas.cu  version1.cu  version2.cu  version3.cu  version4.cu  warmup.cu
LLM/: GPT2.md  LLaMA.md  Tokenizer.md
Leetcode/: leetcode.h
(+147 files in other folders)
